--- a/.gitignore
+++ b/.gitignore
@@ -53,17 +53,107 @@ next-env.d.ts
 /blob-report/
 /playwright/.cache/
 
-# IDE
-.vscode/
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# IDE - Cursor
+.cursor/
+
+# IDE - Claude
+.claude/
+
+# IDE - IntelliJ
 .idea/
+*.iml
+*.ipr
+*.iws
+out/
+
+# IDE - Other
 *.swp
 *.swo
+*~
 
-# OS
+# OS - macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# OS - Windows
 Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+
+# OS - Linux
+*~
+.directory
+.Trash-*
 
 # Temporary files
 *.tmp
 *.temp
 .cache/
+
+# Docker
+docker-compose.override.yml
+.dockerignore.local
+
+# Environment files with secrets (add exceptions if needed)
+.env.production
+.env.staging
+
+# Build outputs
+dist/
+build/
+*.tgz
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
