--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "accessibility.signals.chatResponseReceived": {
         "sound": "off"
-    }
+    },
+    "kiroAgent.configureMCP": "Disabled"
 }
