--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.9.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
