chore: Update .gitignore to include specific Claude IDE directories and settings
- Added entries for .claude/data/, .claude/skills/dev-browser/, and .claude/settings.local.json to .gitignore to prevent tracking of IDE-specific files.

--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,9 @@ next-env.d.ts
 .cursor/
 
 # IDE - Claude
-.claude/
+.claude/data/
+.claude/skills/dev-browser/
+.claude/settings.local.json
 
 # IDE - IntelliJ
 .idea/
