chore: Refine .gitignore to specify paths for Jodex and Ralph
- Updated .gitignore to include specific paths for Jodex and Ralph under the prd directory, enhancing file tracking management.

--- a/.gitignore
+++ b/.gitignore
@@ -164,8 +164,8 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .obsidian/
 
 # Jodex codingagent
-jodex*
-ralph*
+/prd/*/jodex*
+/prd/*/ralph*
 
 # Backup files
 *.bak
